--- a/component/pom.xml
+++ b/component/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <name>Genome Nexus Service</name>
-    <description>Genome Nexus Service Module</description>
+    <name>Genome Nexus Component</name>
+    <description>Genome Nexus Component Module</description>
 
-    <artifactId>service</artifactId>
+    <artifactId>component</artifactId>
     <packaging>jar</packaging>
     <parent>
         <groupId>org.cbioportal.genome_nexus</groupId>
@@ -18,17 +18,8 @@
     <dependencies>
         <dependency>
             <groupId>org.cbioportal.genome_nexus</groupId>
-            <artifactId>component</artifactId>
+            <artifactId>model</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cbioportal.genome_nexus</groupId>
-            <artifactId>persistence</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
