--- a/web/pom.xml
+++ b/web/pom.xml
@@ -55,6 +55,15 @@
       <artifactId>spring-boot-starter-tomcat</artifactId>
       <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-security</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>com.google.firebase</groupId>
+          <artifactId>firebase-admin</artifactId>
+          <version>6.8.1</version>
+      </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
